--- a/mansaathi/pubspec.yaml
+++ b/mansaathi/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   
   # Animations
   animations: ^2.0.11
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_test:
